# flow

./: .devcontainer.json  .gitignore  .hlint.yaml  .travis.yml  Bench.hs  CHANGELOG.markdown  CHANGELOG.md  Flow.hs  FlowBench.hs  LICENSE.markdown  LICENSE.md  LICENSE.txt  README.markdown  README.md  Setup.hs  Test.hs  azure-pipelines.yml  compose.yaml  flow.cabal  hlint-flow.yaml  index.html  package.yaml  params.json  stack.yaml
.devcontainer/: compose.yaml  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: brittany.yaml  ci.yaml  ci.yml  hlint.yaml  workflow.yaml
config/: brittany.yaml
source/test-suite/: Main.hs
src/lib/: Flow.hs
src/test/: Main.hs
tests/: Main.hs
