cabal-version: 2.2

name: flow
version: 2.0.0.4

synopsis: Write more understandable Haskell.
description: Flow provides operators for writing more understandable Haskell.

build-type: Simple
category: Combinators, Functions, Utility
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/flow
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , base >= 4.16.0 && < 4.20
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-exported-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: flow
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library

  exposed-modules: Flow
  hs-source-dirs: source/library

test-suite flow-test-suite
  import: executable

  build-depends:
    , HUnit >= 1.6.1 && < 1.7
  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
